--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "ngx-xml2json": "^1.0.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
+    "xml2js": "^0.4.23",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
